# projgr32

./: CMakeLists.txt  FuncPaintWindow32.cpp  FuncPaintWindow32.h  README.md  battlefield.cpp  battlefield.h  battlefieldWindow32.cpp  battlefieldWindow32.h  gr32.cpp  gr32.h  main.cpp
plane/: CMakeLists.txt  plane_ICS.cpp  plane_ICS.h  plane_phys.cpp  plane_phys.h
plane/vect2/: CMakeLists.txt  I2vector.cpp  I2vector.h  R2vector.cpp  R2vector.h
